--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "ipfs.neptunemutual.net",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "build:production": "NODE_ENV=production astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
+  "license": "LicenseRef-LICENSE",
   "dependencies": {
     "astro": "^2.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.44.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "sass": "^1.63.6"
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "dotenv": "12.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "sass": "^1.57.1"
+  },
+  "engines": {
+    "node": ">=16.13.0 <19.0.0.0"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "yarn": "1.22.19"
   }
 }
